# seekr

./: BUILDING.md  Cargo.toml  README.md  justfile
locales/: app.yml
src/: app.rs  conf.rs  default.conf  icons.rs  locale.rs  main.rs  resources.rs  style.css  ui.rs
