[package]
name = "seekr-util"
version = "0.0.3"
edition = "2021"
description = "System search util for linux"
license = "MIT"
repository = "https://github.com/luxluth/seekr"
readme = "README.md"
homepage = "https://github.com/luxluth/seekr"
keywords = ["seekr", "launcher", "spotlight", "search", "gui"]
authors = ["luxluth <delphin.blehoussi93@gmail.com>"]

[dependencies]
exmex = "0.20.3"
gtk = { version = "0.9.4", package = "gtk4", features = ["v4_14"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
dbus = "0.9.7"
freedesktop-desktop-entry = "0.7.5"
fuzzy-matcher = "0.3.7"
async-channel = "2.3.1"
tokio = { version = "1.42.0", features = ["rt", "rt-multi-thread", "sync"] }
lazy_static = "1.5.0"
fragile = "2.0.0"
ini-roundtrip = "0.2.0"
rust-i18n = "3.1.2"

[[bin]]
name = "seekr"
path = "src/main.rs"

[profile.release]
lto = true
codegen-units = 1
